2004-03-13  Michael Banck  <mbanck@gmx.net>

	* test/unitcell.cpp (TestUnitCell): Use %lf instead of %f to read
	in the values from unitcell.txt.

2004-03-07  Geoffrey Hutchison  <ghutchis@wso.williams.edu>

	* src/chdrw.cpp (ReadChemDraw): Add support for reading ChemDraw
	CT files.

	* src/data.h, src/data.cpp: Change GAUSSIANZMAT to GAUSSIANOUT to
	allow support for reading G98 and G03 output.

	* src/extable.txt: Add ChemDraw reading and Gaussian 98/03 output
	to list.

	* src/fileformat.h, src/fileformat.cpp: Ditto.

	* src/extable.h: Regenerate.

	* src/gaussian.cpp: Add support for reading G98/G03 output and
	writing isotopes where applicable.

	* src/hin.cpp: Fix bug with more recent HIN formats with basis set
	information.

	* configure, Makefile.in, */Makefile.in: Update with latest
	autotools.

	* src/mol.cpp, src/mol.h: Backpedal slightly with Fabien's
	2003-12-17 changes. Use OB_TSPIN_MOL as used by 1.100.2 and
	revised AssignSpinMultiplicty to assign OBMol::_tspin.

2004-03-03  Michael Banck  <mbanck@gmx.net>

	Fixes to make InternalToCartesian() and ReadQChem() consistent
	with CartesianToInternal(), so that round-tripping between
	InternalToCartesian() and CartesianToInternal() is
	possible. Thanks to Gerd Menche for the fix.

	* src/obutil.cpp (InternalToCartesian): Initialize index as
	atom->GetIdx() rather than atom->GetIdx() - 1. Subsequently,
	increase the index checks for the first three atoms by one.
	Convert angles to radians before computing cartesian
	coordinates.

	* src/qchem.cpp (ReadQChem): Uncommented the z-matrix reading
	code. Generate one empty internal coordinate in advance.
	Replaced loop until end of block in input file with a for loop
	over the existing atoms. Do not generate new atoms in the loop,
	as they are already present. Do not convert angles to radians
	any more, this is now done in InternalToCartesian().

2004-02-29  Michael Banck  <mbanck@gmx.net>

	Merged changes from openbabel-1-100-x branch back into HEAD.
